# ConnectWith

./: .gitignore  CMakeLists.txt  LICENSE
.github/workflows/: ci.yml
doc/: roadmap.md  roadmap.txt
src/: client.cpp  endian.h  main.cpp  server_main.cpp
src/cw/: Frame.h  binary.h  endian.h  utf8.h
src/cw/file/: file.h  file_transfer.h  file_writer.h  i_file_writer.h  path_validator.h  transfer_orchestrator.h
src/cw/network/: Client.h  Server.h  client.h  connection.h  file_receiver.h  i_sender.h  packet_handler.h  server.h
src/cw/protocol/: spec.md
src/cw/protocol/packet/: packet.h  packet_type.h
src/protocol/: ack_packet.h  error_packet.h  file_chunk_packet.h  file_done_packet.h  file_info_packet.h  packet_type.h
tests/: main_test.cpp  packet_test.cpp
tests/common/: mock_file_writer.h  mock_sender.h  temp_directory.h  test_helpers.h
tests/integration/: path_validator_test.cpp  transfer_test.cpp
tests/unit/: binary_test.cpp  file_receiver_test.cpp  frame_test.cpp  packet_test.cpp
